fix: springboot3 upgrade: redis libs are updated so made changes accordingly.